--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 NEXT_PUBLIC_SITE_URL=https://example.com
 IPAY88_MERCHANT_KEY=NVRs7KlAsV
+IPAY88_MERCHANT_CODE=PH01663
+IPAY88_CURRENCY=PHP
+IPAY88_LANG=UTF-8
+IPAY88_SIGNATURE_TYPE=SHA256
