--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
-    "@headlessui/react": "^2.0.4",
+    "@headlessui/react": "^2.1.9",
     "@heroicons/react": "^2.1.3",
     "@mapbox/rehype-prism": "^0.9.0",
     "@mdx-js/loader": "^3.0.0",
@@ -25,10 +25,11 @@
     "@types/webpack-env": "^1.18.1",
     "autoprefixer": "^10.4.12",
     "cheerio": "^1.0.0-rc.12",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "fast-glob": "^3.2.11",
     "feather-icons": "^4.29.2",
     "feed": "^4.2.2",
+    "framer-motion": "^11.11.1",
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
@@ -37,7 +38,7 @@
     "react-feather": "^2.0.10",
     "react-player": "^2.16.0",
     "remark-gfm": "^4.0.0",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
