--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "framer-motion": "^11.11.1",
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -42,6 +43,7 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.16",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
     "prettier": "^3.1.1",
