--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-config-next": "^14.0.4",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "sharp": "0.33.1"
+    "sharp": "0.33.1",
+    "webpack": "^5.95.0"
   }
 }
