--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
-    "@headlessui/react": "^2.1.9",
+    "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.1.3",
     "@mapbox/rehype-prism": "^0.9.0",
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.0.4",
+    "@nextui-org/react": "^2.4.8",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.8",
     "@tailwindcss/typography": "^0.5.4",
@@ -29,7 +30,7 @@
     "fast-glob": "^3.2.11",
     "feather-icons": "^4.29.2",
     "feed": "^4.2.2",
-    "framer-motion": "^11.11.1",
+    "framer-motion": "^11.11.10",
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.15",
