--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "^18.2.18",
     "@types/webpack-env": "^1.18.1",
     "autoprefixer": "^10.4.12",
+    "axios": "^1.7.7",
     "cheerio": "^1.0.0-rc.12",
     "clsx": "^2.1.1",
     "fast-glob": "^3.2.11",
