fix: signature error

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ NEXT_PUBLIC_IPAY88_MERCHANT_CODE=PH01663
 NEXT_PUBLIC_IPAY88_CURRENCY=PHP
 NEXT_PUBLIC_IPAY88_LANG=UTF-8
 NEXT_PUBLIC_IPAY88_SIGNATURE_TYPE=SHA256
+NEXT_PUBLIC_IPAY88_URL=https://sandbox.ipay88.com.my/epayment/entry.asp
