fix: get in touch clean code

--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,4 @@ NEXT_PUBLIC_IPAY88_SECRET_KEY=NVRs7KlAsVPH01663
 NEXT_PUBLIC_IPAY88_CURRENCY=PHP
 NEXT_PUBLIC_IPAY88_LANG=UTF-8
 NEXT_PUBLIC_IPAY88_SIGNATURE_TYPE=SHA256
-NEXT_PUBLIC_IPAY88_URL=https://sandbox.ipay88.com.my/epayment/entry.asp
+NEXT_PUBLIC_IPAY88_URL=https://payment.ipay88.com.ph/epayment/entry.asp
