--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,5 @@ NEXT_PUBLIC_IPAY88_SECRET_KEY=403NvpHmsNPH05360
 NEXT_PUBLIC_IPAY88_CURRENCY=PHP
 NEXT_PUBLIC_IPAY88_LANG=UTF-8
 NEXT_PUBLIC_IPAY88_SIGNATURE_TYPE=SHA256
-NEXT_PUBLIC_IPAY88_URL=https://payment.ipay88.com.ph/epayment/entry.asp
+NEXT_PUBLIC_IPAY88_URL=https://payment.ipay88.com.ph/epayment/entry.asp\
+
