--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+     "clean": "rimraf .next && rimraf node_modules/.cache"
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
