--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 NEXT_PUBLIC_SITE_URL=https://example.com
-NEXT_PUBLIC_IPAY88_MERCHANT_KEY=403NvpHmsN
-NEXT_PUBLIC_IPAY88_MERCHANT_CODE=PH05360
-NEXT_PUBLIC_IPAY88_SECRET_KEY=403NvpHmsNPH05360
+NEXT_PUBLIC_IPAY88_MERCHANT_KEY=NVRs7KlAsV
+NEXT_PUBLIC_IPAY88_MERCHANT_CODE=PH01663
+NEXT_PUBLIC_IPAY88_SECRET_KEY=NVRs7KlAsVPH01663
 NEXT_PUBLIC_IPAY88_CURRENCY=PHP
 NEXT_PUBLIC_IPAY88_LANG=UTF-8
 NEXT_PUBLIC_IPAY88_SIGNATURE_TYPE=SHA256
-NEXT_PUBLIC_IPAY88_URL=https://payment.ipay88.com.ph/epayment/entry.asp
+NEXT_PUBLIC_IPAY88_URL=https://sandbox.ipay88.com.ph/epayment/entry.asp
 
