--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/webpack-env": "^1.18.1",
     "autoprefixer": "^10.4.12",
     "axios": "^1.7.9",
+    "boxicons": "^2.1.4",
     "cheerio": "^1.0.0-rc.12",
     "clsx": "^2.1.1",
     "fast-glob": "^3.2.11",
@@ -35,13 +36,16 @@
     "framer-motion": "^11.11.10",
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
-    "nodemailer": "^6.10.0",
+    "nodemailer": "^6.9.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-feather": "^2.0.10",
     "react-player": "^2.16.0",
+    "react-slick": "^0.30.3",
     "remark-gfm": "^4.0.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.1",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.3.3"
   },
