--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint",
-     "clean": "rimraf .next && rimraf node_modules/.cache"
+    "clean": "rimraf .next && rimraf node_modules/.cache"
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
@@ -27,6 +27,7 @@
     "@types/webpack-env": "^1.18.1",
     "autoprefixer": "^10.4.12",
     "axios": "^1.7.9",
+    "boxicons": "^2.1.4",
     "cheerio": "^1.0.0-rc.12",
     "clsx": "^2.1.1",
     "fast-glob": "^3.2.11",
@@ -41,7 +42,10 @@
     "react-dropzone": "^14.2.3",
     "react-feather": "^2.0.10",
     "react-player": "^2.16.0",
+    "react-slick": "^0.30.3",
     "remark-gfm": "^4.0.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.1",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.3.3"
   },
