--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-     "clean": "rimraf .next && rimraf node_modules/.cache"
+    "clean": "rimraf .next && rimraf node_modules/.cache"
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
@@ -42,6 +42,7 @@
     "react-feather": "^2.0.10",
     "react-player": "^2.16.0",
     "remark-gfm": "^4.0.0",
+    "swiper": "^11.2.3",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.3.3"
   },
