--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.0.4",
     "@nextui-org/react": "^2.4.8",
+    "@prisma/client": "^6.4.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.8",
     "@tailwindcss/typography": "^0.5.4",
@@ -27,6 +28,7 @@
     "@types/webpack-env": "^1.18.1",
     "autoprefixer": "^10.4.12",
     "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "cheerio": "^1.0.0-rc.12",
     "clsx": "^2.1.1",
     "fast-glob": "^3.2.11",
@@ -36,6 +38,7 @@
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.15",
+    "prisma": "^6.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -47,6 +50,7 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/nodemailer": "^6.4.16",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
