--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "bcrypt": "^5.1.1",
     "cheerio": "^1.0.0-rc.12",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "fast-glob": "^3.2.11",
     "feather-icons": "^4.29.2",
     "feed": "^4.2.2",
@@ -38,7 +41,6 @@
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.15",
-    "prisma": "^6.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -56,6 +58,7 @@
     "eslint-config-next": "^14.0.4",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "prisma": "^6.4.1",
     "sharp": "0.33.1",
     "webpack": "^5.95.0"
   }
