--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "autoprefixer": "^10.4.12",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "cheerio": "^1.0.0-rc.12",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
