--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-feather": "^2.0.10",
+    "react-hot-toast": "^2.5.2",
     "react-player": "^2.16.0",
     "remark-gfm": "^4.0.0",
     "swiper": "^11.2.3",
