--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "feather-icons": "^4.29.2",
     "feed": "^4.2.2",
     "framer-motion": "^11.11.10",
+    "jsonwebtoken": "^9.0.2",
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.10.0",
@@ -56,6 +57,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/nodemailer": "^6.4.16",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
