--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@next/mdx": "^14.0.4",
     "@nextui-org/react": "^2.4.8",
     "@prisma/client": "^6.5.0",
+    "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.8",
     "@tailwindcss/typography": "^0.5.4",
@@ -32,6 +33,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cheerio": "^1.0.0-rc.12",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -41,6 +43,7 @@
     "feed": "^4.2.2",
     "framer-motion": "^11.11.10",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.484.0",
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.10.0",
@@ -53,7 +56,9 @@
     "react-player": "^2.16.0",
     "remark-gfm": "^4.0.0",
     "swiper": "^11.2.3",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^3.4.13",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
